--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,36 @@ body {
   height: 10%;
   text-align: center;
 }
+
+@media screen and (max-width: 800px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: auto;
+    flex-grow: 1;
+    justify-content: space-between;
+  }
+
+  .title-container {
+    margin: 10px;
+    height: 10%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .title {
+    color: black;
+    font-size: 48px;
+  }
+
+  .element-container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
