--- a/src/panda/panda.css
+++ b/src/panda/panda.css
@@ -119,3 +119,10 @@
   top: -4%;
   left: 48%;
 }
+
+@media only screen and (max-width: 600px) {
+  .box-panda {
+    width: 300px;
+    height: 250px;
+  }
+}
